--- a/grocery-dash/styles.css
+++ b/grocery-dash/styles.css
@@ -112,6 +112,25 @@
   color: #fff;
   font-weight: 500;
 }
+.home-section nav ul.d-flex {
+  list-style: none;
+  margin: 0;
+}
+.home-section nav ul.d-flex li .fa {
+  font-size: 25px;
+}
+.home-section nav ul.d-flex li a {
+  color: #fff;
+  font-size: 20px;
+  margin: 0 14px;
+  text-decoration: none;
+}
+.home-section nav ul.d-flex li {
+  margin-left: 10px;
+}
+.home-section nav ul.d-flex li img {
+  margin: 0 10px;
+}
 nav .sidebar-button i {
   font-size: 35px;
   cursor: pointer;
